<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.razavy.scoreboard.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_a"
                style="@style/teamTitleTextStyle"
                android:text="@string/team_a" />

            <TextView
                android:id="@+id/point_team_a"
                style="@style/pointTextStyle" />

            <Button
                android:id="@+id/three_point_a"
                style="@style/btnStyle"
                android:onClick="threePointA"
                android:text="@string/threePoints" />

            <Button
                android:id="@+id/two_point_a"
                style="@style/btnStyle"
                android:onClick="twoPointA"
                android:text="@string/twoPoints" />

            <Button
                android:id="@+id/free_throw_a"
                style="@style/btnStyle"
                android:onClick="onePointA"
                android:text="@string/freeThrow" />
        </LinearLayout>

        <View style="@style/lineStyle" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_b"
                style="@style/teamTitleTextStyle"
                android:text="@string/teamBTitle" />

            <TextView
                android:id="@+id/point_team_b"
                style="@style/pointTextStyle" />

            <Button
                android:id="@+id/three_point_b"
                style="@style/btnStyle"
                android:onClick="threePointB"
                android:text="@string/threePoints" />

            <Button
                android:id="@+id/two_point_b"
                style="@style/btnStyle"
                android:onClick="twoPointB"
                android:text="@string/twoPoints" />

            <Button
                android:id="@+id/free_throw_b"
                style="@style/btnStyle"
                android:onClick="onePointB"
                android:text="@string/freeThrow" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reset_btn"
        style="@style/btnStyle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="resetButton"
        android:text="@string/resetBtn" />
</RelativeLayout>